SF Primes/src/objects/Dealer_Customer_Profile__c.object
<CustomObject>
    <description>Dealership Ideal Customer Profiles</description>
    <fields>
        <fullName>Accessibility__c</fullName>
        <inlineHelpText>How accessible is the dealership? Easy to get to, easy in-out, easy to find, handicap access</inlineHelpText>
        <label>Accessibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>WebID__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advantages__c</fullName>
        <inlineHelpText>List anything that differentiates then as a dealer. Examples: special sales process, highest customer satisfaction rating, oil change specials, free tires for life, discounts, etc.</inlineHelpText>
        <label>Advantages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>After_Sale_Benefits__c</fullName>
        <inlineHelpText>What benefits does the dealer offer their customers after the sale? (Examples: Service discounts, free oil changes, loaner cars, tires for life, loyalty discount, dealership used car warranty, rewards program, roadside assistance, etc)</inlineHelpText>
        <label>After Sale Benefits</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_and_Least_Selling_Models__c</fullName>
        <label>Best and Least Selling Models</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branded_Name_of_Dealership__c</fullName>
        <inlineHelpText>Example: Stadium GM Superstore. Use when the name is actually a bit different.</inlineHelpText>
        <label>Branded Name of Dealership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Customer_Satisfaction__c</fullName>
        <inlineHelpText>What is the dealer&apos;s Customer Satisfaction Index Survey scores (CSI scores)? What feedback do they generally receive from their customers?</inlineHelpText>
        <label>CSI/Customer Satisfaction</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certified_Used_Inventory_Additional_Info__c</fullName>
        <inlineHelpText>Is there anything else that sets you apart?</inlineHelpText>
        <label>Certified Used Inventory Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certified_Used_Inventory_Quantity_Detail__c</fullName>
        <inlineHelpText>Is your Certified Used Car quantity higher, lower, or same as your competition?</inlineHelpText>
        <label>Certified Used Inventory Quantity Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certified_Used_Inventory_Selection_Det__c</fullName>
        <inlineHelpText>Do you have a variety of makes/models? How do you compare to your competition?</inlineHelpText>
        <label>Certified Used Inventory Selection Dtls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certified_Vehicle_Sales_and_Target__c</fullName>
        <inlineHelpText>Units sold per month and target units.</inlineHelpText>
        <label># Certified Vehicle Sales and Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cities__c</fullName>
        <label>Cities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <inlineHelpText>Which of the four types of customers best identifies the dealer&apos;s IDEAL customer? In other words, the customer they feel represents the best profit opportunity based on their dealership&apos;s strengths?</inlineHelpText>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Based</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Specific_Incentives__c</fullName>
        <inlineHelpText>Do you offer additional dealership specific incentives?  Dollar off coupons (i.e. $750 Off), guaranteed x amount for trade, gifts with purchase, etc.</inlineHelpText>
        <label>Dealer Specific Incentives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ideal Dealer Profile for this customer to be valuable: High volume dealership with larger inventory selection,		
aggressive pricing strategy and unique incentives.</inlineHelpText>
        <label>Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Options__c</fullName>
        <inlineHelpText>What financing options are available for your customers?  Bad credit, credit union relationship, special/secondary financing, local banks, national banks, etc.  Choose all that apply.</inlineHelpText>
        <label>Financing Options</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special/Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Operations_Details__c</fullName>
        <inlineHelpText>What fixed operations does the dealership offer? Ask the dealer to tell you a little about each area and how they stand apart from their competition.</inlineHelpText>
        <label>Fixed Operations Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>Sales; Service; Express Lube; Body Shop</inlineHelpText>
        <label>Hours</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impulse__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ideal Dealer Profile for this customer to be valuable: Offers unique incentives and has excellent inventory choices with
a strong sales force and a great highly visible location with convenient access.</inlineHelpText>
        <label>Impulse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>City/Country setting, Landmarks, Street corner.</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ideal Dealer Profile for this customer to be valuable: Dealership with professional staff, excellent CSI rating and community reputation and involvement. Customer friendly sales process and emphasis on after sale support and services.</inlineHelpText>
        <label>Loyalty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Incentive_Programs__c</fullName>
        <inlineHelpText>Do you participate in all manufacture incentive programs?  Manufacturer rebates, low finance rates, combination of both?</inlineHelpText>
        <label>Manufacturer Incentive Programs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Models_to_Promote_the_Least__c</fullName>
        <label>Models to Promote the Least</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Models_to_Promote_the_Most__c</fullName>
        <label>Models to Promote the Most</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ideal Dealer Profile for this customer to be valuable: Many flexible finance choices both in sales and service, offer unique incentives to create urgency for the customer that doesn&apos;t care &quot;who&quot; they buy from and have the selection of inventory.</inlineHelpText>
        <label>Needs Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Inventory_Quantity_Details__c</fullName>
        <inlineHelpText>Is your New Car quantity higher, lower, or same as your competition?</inlineHelpText>
        <label>New Inventory Sales and Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Vehicle_Sales_and_Target__c</fullName>
        <inlineHelpText>Units sold per month and target units.</inlineHelpText>
        <label># New Vehicle Sales and Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nicknames__c</fullName>
        <inlineHelpText>Nicknames used to describe the geographical area. Example: Dallas Fort Worth is referred to as DFW.</inlineHelpText>
        <label>Nicknames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Dealer_Specific_Incentives__c</fullName>
        <label>Offer Dealer Specific Incentives?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participate_In_All_Manf_Incentives__c</fullName>
        <label>Participate In All Manf Incentives?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some, Not All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perceived_Reputation__c</fullName>
        <inlineHelpText>How is the dealer perceived by the overall community, online reviews, peer reviews, etc.</inlineHelpText>
        <label>Perceived Reputation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy_Comments__c</fullName>
        <label>Pricing Strategy Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy__c</fullName>
        <inlineHelpText>Tell me about your pricing strategy.  Invoice pricing, MSRP, Percentage or amount above or below invoice.</inlineHelpText>
        <label>Pricing Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Above Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Below Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Goals__c</fullName>
        <inlineHelpText>Based on this information, I&apos;m going to develop some specific website optimization ideas so I can provide
the most relevant recommendations for your dealership. Let&apos;s decide on a primary goal for your website. Note: Must be specific and measurable.</inlineHelpText>
        <label>Primary Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Process__c</fullName>
        <inlineHelpText>What is the dealer&apos;s sales process? (Examples: one price, no hassle, defined customer friendly sales process, etc)</inlineHelpText>
        <label>Sales Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Details__c</fullName>
        <inlineHelpText>Ask the customer about their staff. Including their history in the community, longevity, experience, knowledge, courtesy, diversity, community involvement, reputation, certification, professionalism, etc.</inlineHelpText>
        <label>Staff Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Taglines__c</fullName>
        <inlineHelpText>Dealer Taglines or Slogans</inlineHelpText>
        <label>Taglines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Inventory_Sales_and_Selection__c</fullName>
        <inlineHelpText>Tell me about the quality of your Used Car inventory? How do you compare against the competition?</inlineHelpText>
        <label>Used Inventory Sales and Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_Vehicle_Sales_and_target__c</fullName>
        <inlineHelpText>Units sold per month and target units.</inlineHelpText>
        <label># Used Vehicle Sales and Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipName>Customer_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Marketing Alignment Plan</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Customer Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Alignment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>